# libnds

./: .gitignore  CMakeLists.txt  README.md
include/nds/: NDS_filesystem.h  NDS_logging.h  NDS_rom.h
src/: NDS.c  NDS.h  NDS_logging.c  NDS_logging.h  NDS_memory.c  NDS_memory.h  NDS_rom.c  NDS_rom.h  NDS_rom_info.c  NDS_rom_info.h
src/filesystem/: NDS_filesystem.c  NDS_filesystem.h  NDS_nitrorom.c  NDS_nitrorom.h  NDS_rom.c  NDS_rom.h
src/utils/: NDS_endian.c  NDS_endian.h
